--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "font-awesome": "^4.7.0",
     "primereact": "^1.5.3",
+    "prop-types": "^15.6.2",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-responsive-modal": "^3.0.2",
