--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "dependencies": {
     "axios": "^0.18.0",
     "font-awesome": "^4.7.0",
-    "primereact": "^1.5.3",
     "prop-types": "^15.6.2",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
-    "react-responsive-modal": "^3.0.2",
-    "react-router": "^4.2.0",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.1.4"
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
+    "react-responsive-modal": "^3.1.0",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.4",
+    "primereact": "1.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
